
    MAPREDUCE-4792. Unit Test TestJobTrackerRestartWithLostTracker fails 
    with ant-1.8.4. (Amir Sanjar via mattf)

    HDFS-3658. Fix bugs in TestDFSClientRetries and add more tests.  (szetszwo)

    HDFS-3846. Namenode deadlock in branch-1. (Brandon Li via jitendra)

    HADOOP-8745. Incorrect version numbers in hadoop-core POM.
    (Matthias Friedrich via eli)

Release 1.1.0 - 2012.09.28

  INCOMPATIBLE CHANGES

    HDFS-2617. Replaced Kerberized SSL for image transfer and fsck with
    SPNEGO-based solution. (Jakob Homan, Owen O'Malley, Alejandro Abdelnur and
    Aaron T. Myers via atm)

    HDFS-3044. fsck move should be non-destructive by default.
    (Colin Patrick McCabe via eli)

    HADOOP-8230. Enable sync by default and disable append. (eli)

    HADOOP-8365. Provide ability to disable working sync. (eli)

    HADOOP-8552. Conflict: Same security.log.file for multiple users. 
    (kkambatl via tucu)
    
  NEW FEATURES

    MAPREDUCE-3118. Backport Gridmix and Rumen features to
    branch-0.20-security (Ravi Gummadi via amarrk)

    HADOOP-7806. Support binding to sub-interfaces. (harsh, eli via eli)

    HDFS-3150. Add option for clients to contact DNs via hostname. (eli)

    HDFS-3148. The client should be able to use multiple local interfaces
    for data transfer. (eli)

    HDFS-3055. Implement recovery mode (Colin Patrick McCabe via todd)

    HADOOP-8209. Add option to relax build-version check for branch-1. (eli)

    HDFS-3518. Add a utility method DistributedFileSystem.isHealthy(uri) for
    checking if the given HDFS is healthy. (szetszwo)

    HADOOP-7823. Port HADOOP-4012 providing split support for bzip2 compressed
    files to branch-1. (Andrew Purtell via cdouglas)

    HDFS-3703. Datanodes are marked stale if heartbeat is not received in
    configured timeout and are selected as the last location to read from.
    (Jing Zhao via szetszwo)

    MAPREDUCE-4328. Add a JobTracker safemode to allow it to be resilient to